# countrealtime

./: .gitignore  docker-compose.yml  start-dev.sh
.github/workflows/: backend-ci.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  realtime.py  schemas.py
backend/app/routes/: counters.py  groups.py  helpers.py  logs.py
backend/tests/: test_api.py
frontend/: .gitignore  Dockerfile  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: CounterApp.tsx  CounterBoard.tsx  CounterCard.tsx  GroupBar.tsx  LogsScreen.tsx  NameGate.tsx  NameModal.tsx
frontend/app/components/ui/: badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx
frontend/app/lib/: api.ts  format.ts  types.ts  useRealtime.ts
frontend/app/logs/: page.tsx
frontend/public/: manifest.json  sw.js
