[project]
name = "countrealtime-backend"
version = "0.1.0"
description = "Realtime grouped counter backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.125.0",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "sqlmodel==0.0.27",
    "uvicorn==0.38.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "ruff==0.14.9",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
